--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "heroicons": "^1.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
