--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "react-dropzone": "^14.2.1",
     "tailwindcss": "^3.0.24"
   }
 }
