--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "postcss": "^8.4.14",
     "react-dropzone": "^14.2.1",
     "tailwindcss": "^3.0.24"
