--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "arabicthon",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "heroicons": "^1.0.6",
+    "netlify-cli": "^3.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "swiper": "^8.1.6",
     "web-vitals": "^2.1.4"
   },
